# python-project-52

./: .gitignore  Makefile  README.md  build.sh  coverage.lcov  pyproject.toml
.github/workflows/: lint-and-coverage.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/apps/labels/: forms.py  urls.py  views.py
task_manager/apps/statuses/: forms.py  urls.py  views.py
task_manager/apps/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/users/: forms.py  models.py  urls.py  views.py
task_manager/labels/: forms.py  urls.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses_for_tests.json
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks_for_tests.json
task_manager/templates/: 404.html  500.html  base.html  index.html
task_manager/templates/labels/: index.html
task_manager/templates/layouts/: base.html  confim_delete.html  navbar.html  navbar_auth.html  navbar_no_auth.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: detail.html  index.html
task_manager/templates/users/: create.html  delete.html  index.html
task_manager/tests/: test_for_filters.py  test_for_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
